--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -6,6 +6,7 @@
         :root {
             --global-font-size: 16px;
             --title-font-size: 20px;
+            --default-border-radius: 5px;
         }
 
         @media (prefers-color-scheme: light) {
