--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -49,6 +49,7 @@
             font-size: var(--global-font-size);
             background-color: var(--bg-color-0);
             color: var(--primary-color);
+            font-family: system-ui, sans-serif;
         }
         #container {
             margin: 0 auto;
