--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -20,6 +20,7 @@
                 --bg-color-2: rgb(241, 242, 244);
                 --bg-color-3: rgb(220, 223, 228);
                 --bg-color-4: rgb(179, 185, 196);
+                --bg-color-error: rgb(245, 225, 240);
                 --accent-color-0: rgb(110, 93, 198);
                 --accent-color-1: rgb(94, 77, 178);
             }
@@ -36,7 +37,7 @@
                 --bg-color-2: rgb(29, 33, 37);
                 --bg-color-3: rgb(34, 39, 43);
                 --bg-color-4: rgb(40, 46, 51);
-
+                --bg-color-error: rgb(40, 0, 15);
                 --accent-color-0: rgb(143, 126, 231);
                 --accent-color-1: rgb(159, 143, 239);
             }
