--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -5,6 +5,7 @@
     <style>
         :root {
             --global-font-size: 16px;
+            --small-font-size: smaller;
             --title-font-size: 20px;
             --default-border-radius: 5px;
         }
@@ -20,7 +21,7 @@
                 --bg-color-2: rgb(241, 242, 244);
                 --bg-color-3: rgb(220, 223, 228);
                 --bg-color-4: rgb(179, 185, 196);
-                --bg-color-error: rgb(245, 225, 240);
+                --bg-color-error: rgb(255, 236, 248);
                 --accent-color-0: rgb(110, 93, 198);
                 --accent-color-1: rgb(94, 77, 178);
             }
