--- a/src/html/settings.html
+++ b/src/html/settings.html
@@ -1,15 +1,15 @@
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
         <title>Todoist One-Click Settings</title>
+        <script type="module" src="index.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <style>
     </style>
     <body>
         <div id="container">
             <h1>Todoist One-Click Settings</h1>
-            <tc-settings></tc-settings>
+            <main></main>
         </div>
-        <script type="module" src="settings.js"></script>
     </body>
 </html>
